--- a/app/view/app.component.html
+++ b/app/view/app.component.html
@@ -67,6 +67,9 @@
 			<li>
 
 				<a routerLink="/project-list" routerLinkActive="active" i18n>
+					<span class="sidebar-icon-wrapper">
+						<i class="fa fa-suitcase" aria-hidden="true"></i>
+					</span>
 					 Projects
 				</a>
 			</li>
@@ -74,12 +77,18 @@
 			<li>
 
 				<a routerLink="/converter-list" routerLinkActive="active" i18n>
+					<span class="sidebar-icon-wrapper">
+						<i class="fa fa-cog" aria-hidden="true"></i>
+					</span>
 					 Converters
 				</a>
 			</li>
 
 			<li *ngIf="loggedUser.role === 'ADMIN'">
 				<a routerLink="/user-list" routerLinkActive="active" i18n>
+					<span class="sidebar-icon-wrapper">
+						<i class="fa fa-user" aria-hidden="true"></i>
+					</span>
 					 Users
 				</a>
 			</li>
