--- a/app/view/project-edit.component.html
+++ b/app/view/project-edit.component.html
@@ -2,6 +2,10 @@
 
 	<div class="row">
 		<div class="col-md-12">
+			<div class="form-heading-wrapper">
+				<i class="fa fa-suitcase" aria-hidden="true"></i>
+				<h2>Edit Project</h2>
+			</div>
 			<form *ngIf="model">
 				<div class="form-group">
 					<label for="name">Project name: </label>
