--- a/app/styles/history-panel.component.css
+++ b/app/styles/history-panel.component.css
@@ -36,3 +36,21 @@
 .history-heading-wrapper {
     height: 60px;
 }
+
+.history-panel .row span.field {
+    font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    font-weight: normal;
+    font-style: normal;
+    font-size: .9em;
+    color: #333;
+    white-space: pre-wrap;
+    direction: ltr;
+    -moz-tab-size: 2;
+    -o-tab-size: 2;
+    tab-size: 2;
+    background: #fafafa;
+    border: 1px solid #d8d8d8;
+    border-radius: 3px;
+    padding-left: 5px;
+    padding-right: 5px;
+}
