--- a/app/view/project-add.component.html
+++ b/app/view/project-add.component.html
@@ -2,26 +2,91 @@
 
 	<div class="row">
 		<div class="col-md-12">
-			<form *ngIf="model">
+			<div class="form-heading-wrapper">
+				<i class="fa fa-suitcase" aria-hidden="true"></i>
+				<h2>Create Project</h2>
+			</div>
+			<form *ngIf="model" #projectForm="ngForm">
 				<div class="form-group">
 					<label for="name">Project name </label>
-					<input class="form-control" type="text" name="name" id="name" [(ngModel)]="model.name" />
+					<input class="form-control"
+						   type="text"
+						   name="name"
+						   id="name"
+						   required
+						   [(ngModel)]="model.name"
+						   #name="ngModel"
+					/>
+
+					<div *ngIf="formErrors.name"
+						 class="alert alert-danger">
+						{{formErrors.name}}
+					</div>
 				</div>
+
+
 				<div class="form-group">
 					<label for="hashMapIdentifier">Project ID </label>
-					<input class="form-control" type="text" name="hashMapIdentifier" id="hashMapIdentifier" [(ngModel)]="model.hashMapIdentifier" />
+					<input class="form-control"
+						   type="text"
+						   name="hashMapIdentifier"
+						   id="hashMapIdentifier"
+						   required
+						   [(ngModel)]="model.hashMapIdentifier"/>
+
+					<div *ngIf="formErrors.hashMapIdentifier"
+						 class="alert alert-danger">
+						{{formErrors.hashMapIdentifier}}
+					</div>
+
 				</div>
 				<div class="form-group">
 					<label for="git">Git Url </label>
-					<input class="form-control" type="text" name="git" id="git" [(ngModel)]="model.git" />
+					<input class="form-control"
+						   type="text"
+						   name="git"
+						   id="git"
+						   required
+						   [(ngModel)]="model.git"
+						   #git="ngModel"
+					/>
+
+					<div *ngIf="formErrors.git"
+						 class="alert alert-danger">
+						{{formErrors.git}}
+					</div>
 				</div>
+
 				<div class="form-group">
-					<label for="project_key">Project key </label>
-					<input class="form-control" type="text" name="project_key" id="project_key" [(ngModel)]="model.projectKey" />
+					<label for="projectKey">Project key </label>
+					<input class="form-control"
+						   type="text"
+						   name="projectKey"
+						   id="projectKey"
+						   required
+						   [(ngModel)]="model.projectKey"
+					/>
+
+					<div *ngIf="formErrors.projectKey"
+						 class="alert alert-danger">
+						{{formErrors.projectKey}}
+					</div>
 				</div>
+
 				<div class="form-group">
-					<label for="resource_path">Path to resources </label>
-					<input class="form-control" type="text" name="resource_path" id="resource_path" [(ngModel)]="model.resourcePath" />
+					<label for="resourcePath">Path to resources </label>
+					<input class="form-control"
+						   type="text"
+						   name="resourcePath"
+						   id="resourcePath"
+						   required
+						   [(ngModel)]="model.resourcePath"
+					/>
+
+					<div *ngIf="formErrors.resourcePath"
+						 class="alert alert-danger">
+						{{formErrors.resourcePath}}
+					</div>
 				</div>
 				<div class="form-group">
 					<label for="tmpBranchesInput">Enter branches for project</label>
@@ -66,66 +131,23 @@
 				</div>
 
 				<div class="form-group form-footer">
-					<button type="button" class="btn btn-primary btn-save" (click)="addProject()">Submit</button>
+					<button
+							type="button"
+							class="btn btn-primary btn-cancel"
+							(click)="goBack()"
+					>
+						Cancel
+					</button>
+					<button
+							type="button"
+							class="btn btn-primary btn-save"
+							(click)="addProject()"
+							[disabled]="!projectForm.form.valid"
+					>
+						Submit
+					</button>
 				</div>
 			</form>
 		</div>
 	</div>
 </div>
-
-<!--
-<div class="col-md-6">
-			<form *ngIf="model">
-				<div class="form-group">
-					<label for="name">Project name: </label>
-					<input class="form-control" type="text" name="name" id="name" [(ngModel)]="model.name" />
-				</div>
-				<div class="form-group">
-					<label for="hashMapIdentifier">Project ID: </label>
-					<input class="form-control" type="text" name="hashMapIdentifier" id="hashMapIdentifier" [(ngModel)]="model.hashMapIdentifier" />
-				</div>
-				<div class="form-group">
-					<label for="git">GIT URL: </label>
-					<input class="form-control" type="text" name="git" id="git" [(ngModel)]="model.git" />
-				</div>
-				<div class="form-group">
-					<label for="project_key">Project key: </label>
-					<input class="form-control" type="text" name="project_key" id="project_key" [(ngModel)]="model.projectKey" />
-				</div>
-				<div class="form-group">
-					<label for="resource_path">Path to resources: </label>
-					<input class="form-control" type="text" name="resource_path" id="resource_path" [(ngModel)]="model.resourcePath" />
-				</div>
-				<div class="form-group">
-					<label for="tmpBranchesInput">Enter branches for project:</label>
-					<div class="input-group">
-						<input class="form-control" type="text" name="tmpBranchesInput" id="tmpBranchesInput" [(ngModel)]="tmpBranchesInput" />
-						<span class="input-group-btn">
-							<button class="btn btn-primary" (click)="addBranch()">
-								<i class="fa fa-plus"></i>Add
-							</button>
-						</span>
-					</div>
-					<div class="project-branch" *ngFor="let branch of model.branches; let i = index">
-						{{branch}}
-						<i class="glyphicon glyphicon-remove" (click)="removeBranch(i)"></i>
-					</div>
-				</div>
-
-				<div class="form-group">
-					<label for="assigneeSelect">
-						Select assignee:
-					</label>
-					<select class="form-control" id="assigneeSelect" #selectValue (change)="onAssigneeSelected(selectValue.value)">
-						<option *ngFor="let user of assignableUsers" [value]="user.id">
-							{{user.name}}
-						</option>
-					</select>
-				</div>
-
-				<div class="form-group">
-					<button type="button" class="btn btn-primary" (click)="addProject()">Submit</button>
-				</div>
-			</form>
-		</div>
-		-->
