Adding support for admin/user/guest role

--- a/app/view/app.component.html
+++ b/app/view/app.component.html
@@ -28,7 +28,7 @@
 				</a>
 			</li>
 
-			<li *ngIf="loggedUser.role === 'ADMIN'">
+			<li *ngIf="loggedUser.role === 'admin'">
 				<a routerLink="/user-list" routerLinkActive="active" i18n>
 					<span class="sidebar-icon-wrapper">
 						<i class="fa fa-user" aria-hidden="true"></i>
