Support for price

--- a/app/view/project-detail.component.html
+++ b/app/view/project-detail.component.html
@@ -54,6 +54,16 @@
 					<label><span>Branches</span></label>
 					<p>{{project.branches.join(', ')}}</p>
 				</div>
+
+				<div>
+					<label><span>Translation status</span></label>
+					<p>{{project.status}}</p>
+				</div>
+
+				<div>
+					<label><span>Estimated price</span></label>
+					<p>{{project.price}} {{project.currency}</p>
+				</div>
 			</div>
 		</div>
 	</div>
