--- a/app/view/project-edit.component.html
+++ b/app/view/project-edit.component.html
@@ -28,6 +28,10 @@
 					<input class="form-control" type="text" name="resource_path" id="resource_path" [(ngModel)]="model.resourcePath" />
 				</div>
 				<div class="form-group">
+					<label for="translation_status">Translation status: </label>
+					<input class="form-control" type="text" name="translation_status" id="translation_status" [(ngModel)]="model.status" />
+				</div>
+				<div class="form-group">
 					<label for="tmpBranchesInput">Enter branches for project:</label>
 					<div class="input-group">
 						<input class="form-control" type="text" name="tmpBranchesInput" id="tmpBranchesInput" [(ngModel)]="tmpBranchesInput" />
