Fixing issues with project detail

--- a/app/view/project-detail.component.html
+++ b/app/view/project-detail.component.html
@@ -62,7 +62,7 @@
 
 				<div>
 					<label><span>Estimated price</span></label>
-					<p>{{project.price}} {{project.currency}</p>
+					<p>{{project.price}} {{project.currency}}</p>
 				</div>
 			</div>
 		</div>
