--- a/app/view/project-add.component.html
+++ b/app/view/project-add.component.html
@@ -8,7 +8,7 @@
 			</div>
 			<form *ngIf="model" #projectForm="ngForm">
 				<div class="form-group">
-					<label for="name">Project name </label>
+					<label for="name">Project name *</label>
 					<input class="form-control"
 						   type="text"
 						   name="name"
@@ -26,7 +26,7 @@
 
 
 				<div class="form-group">
-					<label for="hashMapIdentifier">Project ID </label>
+					<label for="hashMapIdentifier">Project ID *</label>
 					<input class="form-control"
 						   type="text"
 						   name="hashMapIdentifier"
@@ -41,7 +41,7 @@
 
 				</div>
 				<div class="form-group">
-					<label for="git">Git Url </label>
+					<label for="git">Git Url *</label>
 					<input class="form-control"
 						   type="text"
 						   name="git"
@@ -58,7 +58,7 @@
 				</div>
 
 				<div class="form-group">
-					<label for="projectKey">Project key </label>
+					<label for="projectKey">Project key *</label>
 					<input class="form-control"
 						   type="text"
 						   name="projectKey"
@@ -74,7 +74,7 @@
 				</div>
 
 				<div class="form-group">
-					<label for="resourcePath">Path to resources </label>
+					<label for="resourcePath">Path to resources *</label>
 					<input class="form-control"
 						   type="text"
 						   name="resourcePath"
