--- a/app/styles/form.component.css
+++ b/app/styles/form.component.css
@@ -106,7 +106,7 @@ form input.form-control:focus {
     border-radius: 0;
 }
 
-.ng-invalid.ng-touched {
+input.ng-invalid.ng-touched.form-control {
     border-bottom: 1px solid #a94442;
     border-radius: 0;
 }
