--- a/app/styles/form.component.css
+++ b/app/styles/form.component.css
@@ -110,3 +110,7 @@ input.ng-invalid.ng-touched.form-control {
     border-bottom: 1px solid #a94442;
     border-radius: 0;
 }
+
+input.ng-invalid.ng-touched.form-control.errors {
+    display: block;
+}
